--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,12 @@
 !/datas/thumbs/index.html
 /datas/users/*
 !/datas/users/index.html
+/datas/folio/*
+!/datas/folio/index.html
 /datas/sbr/*
 !/datas/sbr/index.html
+/datas/projects/*
+!/datas/projects/index.html
 .DS_Store
 .htaccess
 .tags
